; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/usb/em28xx/extr_em28xx-video.c_em28xx_vdev_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/usb/em28xx/extr_em28xx-video.c_em28xx_vdev_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.em28xx = type { %struct.TYPE_4__*, i64, i32, %struct.TYPE_3__* }
%struct.TYPE_4__ = type { i32 }
%struct.TYPE_3__ = type { i32 }
%struct.video_device = type { i32, i64, i32*, i32* }

@.str = private unnamed_addr constant [6 x i8] c"%s %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.em28xx*, %struct.video_device*, %struct.video_device*, i8*)* @em28xx_vdev_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @em28xx_vdev_init(%struct.em28xx* %0, %struct.video_device* %1, %struct.video_device* %2, i8* %3) #0 {
  %5 = alloca %struct.em28xx*, align 8
  %6 = alloca %struct.video_device*, align 8
  %7 = alloca %struct.video_device*, align 8
  %8 = alloca i8*, align 8
  store %struct.em28xx* %0, %struct.em28xx** %5, align 8
  store %struct.video_device* %1, %struct.video_device** %6, align 8
  store %struct.video_device* %2, %struct.video_device** %7, align 8
  store i8* %3, i8** %8, align 8
  %9 = load %struct.video_device*, %struct.video_device** %6, align 8
  %10 = load %struct.video_device*, %struct.video_device** %7, align 8
  %11 = bitcast %struct.video_device* %9 to i8*
  %12 = bitcast %struct.video_device* %10 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %11, i8* align 8 %12, i64 32, i1 false)
  %13 = load %struct.em28xx*, %struct.em28xx** %5, align 8
  %14 = getelementptr inbounds %struct.em28xx, %struct.em28xx* %13, i32 0, i32 3
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = load %struct.video_device*, %struct.video_device** %6, align 8
  %18 = getelementptr inbounds %struct.video_device, %struct.video_device* %17, i32 0, i32 3
  store i32* %16, i32** %18, align 8
  %19 = load %struct.em28xx*, %struct.em28xx** %5, align 8
  %20 = getelementptr inbounds %struct.em28xx, %struct.em28xx* %19, i32 0, i32 2
  %21 = load %struct.video_device*, %struct.video_device** %6, align 8
  %22 = getelementptr inbounds %struct.video_device, %struct.video_device* %21, i32 0, i32 2
  store i32* %20, i32** %22, align 8
  %23 = load %struct.em28xx*, %struct.em28xx** %5, align 8
  %24 = getelementptr inbounds %struct.em28xx, %struct.em28xx* %23, i32 0, i32 1
  %25 = load i64, i64* %24, align 8
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %30

27:                                               ; preds = %4
  %28 = load %struct.video_device*, %struct.video_device** %6, align 8
  %29 = getelementptr inbounds %struct.video_device, %struct.video_device* %28, i32 0, i32 1
  store i64 0, i64* %29, align 8
  br label %30

30:                                               ; preds = %27, %4
  %31 = load %struct.video_device*, %struct.video_device** %6, align 8
  %32 = getelementptr inbounds %struct.video_device, %struct.video_device* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 8
  %34 = load %struct.em28xx*, %struct.em28xx** %5, align 8
  %35 = getelementptr inbounds %struct.em28xx, %struct.em28xx* %34, i32 0, i32 0
  %36 = load %struct.TYPE_4__*, %struct.TYPE_4__** %35, align 8
  %37 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %36, i32 0, i32 0
  %38 = call i8* @dev_name(i32* %37)
  %39 = load i8*, i8** %8, align 8
  %40 = call i32 @snprintf(i32 %33, i32 4, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i8* %38, i8* %39)
  %41 = load %struct.video_device*, %struct.video_device** %6, align 8
  %42 = load %struct.em28xx*, %struct.em28xx** %5, align 8
  %43 = call i32 @video_set_drvdata(%struct.video_device* %41, %struct.em28xx* %42)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @snprintf(i32, i32, i8*, i8*, i8*) #2

declare dso_local i8* @dev_name(i32*) #2

declare dso_local i32 @video_set_drvdata(%struct.video_device*, %struct.em28xx*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
